alignment fixes + centering book cards

--- a/style.css
+++ b/style.css
@@ -2,14 +2,14 @@
 *{
     padding: 0px;
     margin: 0px;
-    /* box-sizing: border-box; */
+    box-sizing: border-box;
 }
 
 .container {
     display: grid;
     height: 100vh;
     grid-template-rows: 100px 100px;
-    /* border: 2px solid red; */
+    background-color: #f4f4f5;
 }
 
 .heading { 
@@ -17,18 +17,15 @@
     justify-content: space-between;
     align-items: center;
     font-size: 26px;
-    /* border: 2px solid blue; */
+    background-color: white;
+    font-family: Georgia, 'Times New Roman', Times, serif;
     box-shadow: 0px 10px 10px lightgray;
-
+    margin-bottom: 20px;
 }
 
 .add-button {
     display: flex;
     justify-content: center;
-}
-
-.add-button {
-    display: flex;
 }
 
 .add-button button {
@@ -37,18 +34,21 @@
 }
 
 .heading .title {
-    margin-left: 5vw;
+    margin-left: 3vw;
+    font-weight: bold;
+    font-size: 30px;
 }
 
 .heading .log-in {
-    margin-right: 5vw;
+    margin-right: 3vw;
 }
 
 .card-holder {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    /* border: 3px solid green; */
+    justify-content: center;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 350px));
     gap: 30px;
+    margin-top: 20px;
 }
 
 .card-holder .book {
@@ -56,12 +56,13 @@
     flex-direction: column;
     justify-content: center;
     height: 250px;
-    font-size: 24px;
+    font-size: 20px;
     text-align: center;
-    /* border: 2px solid yellow; */
     border-radius: 10%;
-    gap: 10px;
+    gap: 20px;
+    background-color: white;
     box-shadow: 0px 10px 10px lightgray;
+    font-family: "Roboto";
 
 }
 
@@ -81,7 +82,7 @@
 }
 
 .card-holder .title {
-    margin-top: 40px;
+    margin-top: 20px;
 }
 
 /*top, right, bottom, left*/
@@ -180,4 +181,9 @@
     color: #fe0606;
     text-decoration: none;
     font-size: 30px;
+}
+
+@font-face {
+    font-family: "Roboto";
+    src: url("./fonts/Roboto-Regular.ttf") format("woff2");
 }
